fixed alignment  for some buttons

--- a/styles.css
+++ b/styles.css
@@ -159,7 +159,7 @@ p {
 .expandCamoButton {
     font-family: "Hitmarker";
     font-size: 120%;
-    margin-left: 15%;
+    margin-left: 25%;
     color: #ccc;
     border-color: black;
     background-color:#ec6f00 ;
